new updated UI ( stage 1 ) with scope of profile added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FlipWarranty">
         <activity
-            android:name=".WarrantyInfoActivity"
-            android:exported="false"
-            android:parentActivityName=".MainActivity" />
+            android:name=".customer.CustomerDashboard"
+            android:exported="false" />
+        <activity
+            android:name=".retailer.RetailerDashboard"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -26,7 +28,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".CaptureAct"
+            android:name=".customer.WarrantyInfoActivity"
+            android:exported="false"
+            android:parentActivityName=".customer.GetWarranty" />
+        <activity
+            android:name=".customer.GetWarranty"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".customer.CaptureAct"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             android:theme="@style/zxing_CaptureTheme" />
