--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,14 @@ dependencies {
 
     // barcode library
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+
+    //navigation component
+
+    implementation("androidx.navigation:navigation-fragment-ktx:2.5.0")
+    implementation("androidx.navigation:navigation-ui-ktx:2.5.0")
+    implementation("androidx.navigation:navigation-dynamic-features-fragment:2.5.0")
+    // Testing Navigation
+    androidTestImplementation("androidx.navigation:navigation-testing:2.5.0")
+    // Jetpack Compose Integration
+    implementation("androidx.navigation:navigation-compose:2.5.0")
 }
