--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FlipWarranty">
         <activity
-            android:name=".customer.CustomerDashboard"
+            android:name=".customer.ui.CustomerDashboard"
             android:exported="false" />
         <activity
-            android:name=".retailer.RetailerDashboard"
+            android:name=".retailer.ui.RetailerDashboard"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -41,7 +41,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".customer.CaptureAct"
+            android:name=".customer.services.CaptureAct"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             android:theme="@style/zxing_CaptureTheme" />
