--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.flip.warranty">
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -13,13 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FlipWarranty">
         <activity
-            android:name=".customer.ui.CustomerDashboard"
-            android:exported="false" />
-        <activity
-            android:name=".retailer.ui.RetailerDashboard"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".LoginPage"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,6 +22,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".customer.ui.CustomerDashboard"
+            android:exported="false" />
+        <activity
+            android:name=".retailer.ui.RetailerDashboard"
+            android:exported="false" />
+
         <activity
             android:name=".customer.WarrantyInfoActivity"
             android:exported="false"
@@ -44,7 +46,8 @@
             android:name=".customer.services.CaptureAct"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
-            android:theme="@style/zxing_CaptureTheme" />
+            android:theme="@style/zxing_CaptureTheme"
+            tools:ignore="LockedOrientationActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
