--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,9 @@ dependencies {
     implementation "androidx.security:security-crypto:1.0.0"
 
     //Glide
-    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'se.emilsjolander:StickyScrollViewItems:1.0.0'
+
 
 }
