--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,5 +88,8 @@ dependencies {
 
     implementation 'se.emilsjolander:StickyScrollViewItems:1.0.0'
 
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+
 
 }
